--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,15 +1,27 @@
-@import url(http://fonts.googleapis.com/css?family=Fugaz+One);
-
 .tasks {
   color: #262626;
 }
 
 .task {
   cursor: pointer;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .task:hover {
+  border: 1px solid gray;
   background-color: #dfdfdf;
+}
+
+.status {
+  display: inline;
+  margin: 2px;
+}
+
+.description {
+  display: inline;
+  padding-left: 5px;
+  margin: 2px;
 }
 
 .meta {
