Added color to task elems. Added color based on value for priority. Added color to annotations.

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   margin: 50px 0px;
   padding: 0px;
   font-family: 'helvetica', 'PT Mono', sans-serif;
-  color: #262626;
+  color: #2e3436;
   background-color: #fff;
 }
 
